# dialup

./: .gitignore  .gitmodules  Makefile  README.md
tools/: install_build_deps.ps1
tools/build-tools/: BuildRulesConfig.cmake.in  CMakeLists.txt
tools/build-tools/cmake/: GameBinaryDir.cmake  Plugin.cmake  PostBuild.cmake  PostProject.cmake  PreProject.cmake  SDK.cmake  Tidy.cmake  shell-exception.txt
tools/build-tools/make/: common.mk  rocketleague.mk  shell.mk
tools/scripts/: set-msvc-version.sh
